<resources>
    <string name="app_name">drawer demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gestMap">Gestion des lignes</string>
    <string name="menu_gestBus">Gestion des bus</string>
    <string name="menu_gestCourse">Gestion des course</string>
    <string name="ajouter_station">ajouter station</string>
    <string name="login">login</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="register">register</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome_text">welcome_text</string>

</resources>